<resources>
    <string name="app_name">TestModuloTech</string>
    <string name="error_message">Une erreur s\'est produite. Veuillez réessayer plus tard.</string>
    <string name="retry">Réessayer</string>
    <string name="name">Nom : %1$s</string>
    <string name="type">Type : %1$s</string>
    <string name="mode_text">Mode : %1$s</string>
    <string name="mode_label">Mode</string>
    <string name="intensity_text">Intensité : %1$d</string>
    <string name="intensity_label">Intensité</string>
    <string name="position_text">Position : %1$d</string>
    <string name="position_label">Position</string>
    <string name="temperature_text">Température : %1$.1f</string>
    <string name="temperature_label">Température</string>
    <string name="filter">Filtre</string>
    <string name="not_supported_device">Appareil non pris en charge</string>
    <string name="first_name">Prénom</string>
    <string name="last_name">Nom</string>
    <string name="birth_date">Date de naissance</string>
    <string name="street">Rue</string>
    <string name="street_code">N° de rue</string>
    <string name="postal_code">Code postal</string>
    <string name="city">Ville</string>
    <string name="country">Pays</string>
    <string name="my_account">Mon compte</string>
    <string name="save">Enregistrer</string>
    <string name="error_message_my_account">Veuillez vérifier les informations.</string>
    <string name="my_account_saved">Enregistré.</string>
</resources>