<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.devicesteering.DeviceSteeringFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/deviceSteeringToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"/>

    <TextView
        android:id="@+id/txtSteeringDeviceName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Device name" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/lightSettingsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/mode_label" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switchLightMode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/intensity_label"
                android:textAlignment="center" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.slider.Slider
                    android:id="@+id/sliderLightIntensity"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:valueFrom="0.0"
                    android:valueTo="100.0" />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/roller_shutter_settings_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/position_label"
                android:textAlignment="center" />

            <FrameLayout
                android:layout_width="32dp"
                android:layout_height="200dp"
                android:layout_gravity="center">

                <com.google.android.material.slider.Slider
                    android:id="@+id/slider_roller_shutter_position"
                    android:layout_width="200dp"
                    android:layout_height="32dp"
                    android:layout_gravity="center"
                    android:rotation="270"
                    android:valueFrom="0"
                    android:valueTo="100" />
            </FrameLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/heaterSettingsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/mode_label" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switchHeaterMode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/temperature_label"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/txtHeaterTemperature"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="20sp"
                tools:text="20°C" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.slider.Slider
                    android:id="@+id/sliderHeaterTemperature"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:stepSize="0.5"
                    android:valueFrom="7.0"
                    android:valueTo="28.0" />
            </LinearLayout>
        </LinearLayout>
        <FrameLayout
            android:id="@+id/unknownDeviceLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:text="@string/not_supported_device"/>
        </FrameLayout>
    </FrameLayout>

</LinearLayout>